prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_slot_access_unknown.nut
// EXPECTED: no compile-time error (should fall back to runtime check)
// Slot access (dynamic key) has unknown type at compile time
local t = { value = 42 }
local key = "value"
local x: int = t[key]   // type of t[key] is unknown, runtime check
return null
